tests/fail-namespace2.mg
int x;
namespace sp {
  void modify() { x = 3; } // error: cannot access outside namespace
}

object main { }
